[project]
name = "multi-agent-handoffs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.5",
    "langchain-anthropic>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.2",
    "langgraph-cli[inmem]>=0.4.7",
    "langsmith>=0.4.42",
]
